--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">PROEBAT</string>
+    <string name="title_miss">Пропустить</string>
+    <string name="title_statistic">Статистика</string>
+    <string name="title_settings">Настройки</string>
 </resources>
