--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">Пропустить пару</string>
-    <string name="title_miss">Пропустить</string>
+    <string name="app_name">Проебать</string>
+    <string name="title_miss">Проебать</string>
     <string name="title_statistic">Статистика</string>
     <string name="title_settings">Настройки</string>
 </resources>
